name:                dropload-cli
version:             0.1.0
synopsis:            A CLI interface to my dropload service
description:         Please see README.md
homepage:            https://github.com/kthelgason/dropload-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Kári Tristan Helgason
maintainer:          kthelgason@gmail.com
copyright:           2016 Kári Tristan Helgason
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable dropload-cli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dropload-cli
  default-language:    Haskell2010

test-suite dropload-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dropload-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dropload-cli
